objects/zkups__ShipmateUPSGeneralSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for general settings. There should only be one record max per org. If utilized, the record must be created manually and the fields must be set manually.</description>
    <fields>
        <fullName>zkups__AllowEditOfUsedCommercialInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, user will be allowed to edit UPS Commercial Invoice records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</description>
        <inlineHelpText>If Checked, user will be allowed to edit UPS Commercial Invoice records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</inlineHelpText>
        <label>Allow Edit of Used Commercial Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__AllowEditOfUsedIntlCommodity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, user will be allowed to edit UPS International Commodity records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</description>
        <inlineHelpText>If Checked, user will be allowed to edit UPS International Commodity records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</inlineHelpText>
        <label>Allow Edit of Used Intl Commodity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__AllowEditOfUsedNaftaCo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, user will be allowed to edit UPS NAFTA Certificate of Origins records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</description>
        <inlineHelpText>If Checked, user will be allowed to edit UPS NAFTA Certificate of Origins records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</inlineHelpText>
        <label>Allow Edit of Used NAFTA CO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__AllowEditOfUsedSedForms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, user will be allowed to edit UPS Electronic Export Informations records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</description>
        <inlineHelpText>If Checked, user will be allowed to edit UPS Shipper Export Declarations records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to UPS with the existing shipments.</inlineHelpText>
        <label>Allow Edit of Used EEI Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ConvertNonAscii__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Convert non ascii characters for labels</description>
        <inlineHelpText>Convert non ascii characters for labels</inlineHelpText>
        <label>Convert non ascii characters for labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DisableCreatingActivityAfterSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable creating activity (Send Email)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__HideYourUPSAccountNumberInWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Your UPS Account Number In Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__IgnoreAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__IgnoreMaxJobLimitForScheduledTrack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Max Job Limit for Scheduled Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__PrintOutHighValueReport2Times__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only for ZPL/EPL format</description>
        <inlineHelpText>Only for ZPL/EPL format</inlineHelpText>
        <label>Print out HighValueReport 2 times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__RecordShippingCheckpoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Shipping Checkpoints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__RunDemoMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configures ZenKraft Shipmate to communicate to the UPS test servers. A valid UPS Account number that is compatible with the UPS test servers must be used.</description>
        <inlineHelpText>Configures ZenKraft Shipmate to communicate to the UPS test servers. A valid UPS Account number that is compatible with the UPS test servers must be used.</inlineHelpText>
        <label>Run Demo Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__TruncateCompanyNameToUPSLimits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Truncate Company Name to UPS limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__Truncate_ZipCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Truncate ZipCode to 5 characters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__USPSTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All tracking for Mail Innovations uses USPS web api. Please check &apos;USPS Web API UserID&apos; field</description>
        <inlineHelpText>All tracking for Mail Innovations uses USPS web api. Please check &apos;USPS Web API UserID&apos; field</inlineHelpText>
        <label>USPS Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__USPSWebAPIUserID__c</fullName>
        <label>USPS Web API UserID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UpdateShipmentFieldsFromTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update shipment fields from tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__UseFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save labels to Salesforce File</description>
        <inlineHelpText>Save labels to Salesforce File</inlineHelpText>
        <label>Use Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__UsePreferenceDetailsForEmailLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Preference Details for Email Label</label>
        <type>Checkbox</type>
    </fields>
    <label>UPS Shipmate General Settings</label>
</CustomObject>